InitialDigitalClockDisplayJoe/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\Joe\Documents\ASBootcamp\Week 1\InitialDigitalClockDisplay
-d
C:\Users\Joe\Documents\ASBootcamp\Week 1\InitialDigitalClockDisplay\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Joe\Documents\ASBootcamp\Week 1\InitialDigitalClockDisplay\AlarmClock.java
<---- end of javadoc command ---->
Loading source file C:\Users\Joe\Documents\ASBootcamp\Week 1\InitialDigitalClockDisplay\AlarmClock.java...
C:\Users\Joe\Documents\ASBootcamp\Week 1\InitialDigitalClockDisplay\AlarmClock.java:20: error: '(' expected
    public void isAlarmSet
    ^
C:\Users\Joe\Documents\ASBootcamp\Week 1\InitialDigitalClockDisplay\AlarmClock.java:21: error: '(' expected
    public void getAlarmTime
    ^
C:\Users\Joe\Documents\ASBootcamp\Week 1\InitialDigitalClockDisplay\AlarmClock.java:22: error: '(' expected
    public void cancelAlarm
    ^
C:\Users\Joe\Documents\ASBootcamp\Week 1\InitialDigitalClockDisplay\AlarmClock.java:25: error: '(' expected
}
^
4 errors
